--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.speridian</groupId>
-	<artifactId>O360-AI</artifactId>
+	<artifactId>KSIDC_CustomerPortal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
